fix: header alignment for Events page #626 (#633)
* Header alignment for Events page #626

* Update ClubsPage.css

* Update ClubsPage.css

* shop_textdiv width increase

---------

--- a/src/styles/ClubsPage.css
+++ b/src/styles/ClubsPage.css
@@ -11,7 +11,7 @@
   text-align: center;
 }
 .cp_textdiv {
-  width: 70%;
+  width: 80%;
 }
 .cp_header1 {
   font-family: Montserrat, sans-serif;
